--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 *.xcscheme
 
 *.plist
+
+TestProjectGitHub/TestProjectGitHub.xcodeproj/project.xcworkspace/xcuserdata/rentonlin.xcuserdatad/UserInterfaceState.xcuserstate
+
+*.xcuserstate
