--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@
 TestProjectGitHub/TestProjectGitHub.xcodeproj/project.xcworkspace/xcuserdata/rentonlin.xcuserdatad/UserInterfaceState.xcuserstate
 
 *.xcuserstate
+
+*.xcuserstate
